include/next_utf8_token.cpp
/* Generated by re2c 0.13.5 on Fri Jun 12 16:12:21 2015 */
////////////////////////////////////////////////////////////////////////////////
// next_token.re2c
// Input for re2c to generate the Tokenizer::next_token() function
// Use "re2c -is next_token.re2c > next_token.cpp" to generate the C++ code
// TH, Sept. 2014
// TODO: Email/Web-Addresses
// TODO: Better date expressions
// TODO: commas in numbers
////////////////////////////////////////////////////////////////////////////////

Tokenizer::Token Tokenizer::next_token2()
{  
next_token_start:

  #define YYFILL(n)
  // Remark: YYCTYPE= "unsigned char" is very important to handle 8-bit ASCII correctly
  // YYCURSOR, YYLIMIT YYMARKER are the instance variables which re2c uses for tokenisation
  
  

  //U+201B		0xe2 0x80 0x9b	SINGLE HIGH-REVERSED-9 QUOTATION MARK
  //U+201F		0xe2 0x80 0x9f	DOUBLE HIGH-REVERSED-9 QUOTATION MARK

  // Store token start
  token_begin = cursor;

  if (cursor >= limit) {
    // cursor reached the end of the line
    ++current_global_offs;
    return t_return(ttEOS);
  }
  
  // Important: 
  // - Order patterns by importance
  // - Provide a catch-all pattern at the end, otherwise the return value is undefined
  
  
{
	unsigned char yych;
	unsigned int yyaccept = 0;

	if ((limit - cursor) < 33) YYFILL(33);
	yych = (unsigned char)*cursor;
	switch (yych) {
	case 0x00:
	case 0x01:
	case 0x02:
	case 0x03:
	case 0x04:
	case 0x05:
	case 0x06:
	case 0x07:
	case 0x08:
	case '\n':
	case '\v':
	case '\f':
	case 0x0E:
	case 0x0F:
	case 0x10:
	case 0x11:
	case 0x12:
	case 0x13:
	case 0x14:
	case 0x15:
	case 0x16:
	case 0x17:
	case 0x18:
	case 0x19:
	case 0x1A:
	case 0x1B:
	case 0x1C:
	case 0x1D:
	case 0x1E:
	case 0x1F:
	case '#':
	case '%':
	case '*':
	case '=':
	case '@':
	case '|':
	case '~':
	case 0x7F:	goto yy80;
	case '\t':
	case '\r':
	case ' ':	goto yy77;
	case '!':
	case ',':
	case '/':
	case ':':
	case ';':
	case '?':	goto yy74;
	case '"':	goto yy70;
	case '$':	goto yy75;
	case '&':	goto yy4;
	case '\'':	goto yy54;
	case '(':
	case '{':	goto yy68;
	case ')':
	case '>':
	case '}':	goto yy69;
	case '+':	goto yy66;
	case '-':	goto yy46;
	case '.':	goto yy72;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy8;
	case '<':	goto yy2;
	case 'A':	goto yy10;
	case 'B':
	case 'E':
	case 'K':
	case 'Q':
	case 'R':
	case 'X':
	case 'Z':	goto yy11;
	case 'C':	goto yy12;
	case 'D':	goto yy13;
	case 'F':	goto yy14;
	case 'G':	goto yy15;
	case 'H':	goto yy16;
	case 'I':	goto yy17;
	case 'J':	goto yy18;
	case 'L':	goto yy19;
	case 'M':	goto yy20;
	case 'N':	goto yy21;
	case 'O':	goto yy22;
	case 'P':	goto yy23;
	case 'S':	goto yy24;
	case 'T':	goto yy25;
	case 'U':	goto yy26;
	case 'V':	goto yy27;
	case 'W':	goto yy28;
	case 'Y':	goto yy29;
	case '[':	goto yy48;
	case '\\':	goto yy49;
	case ']':	goto yy50;
	case '^':
	case '_':	goto yy52;
	case '`':	goto yy53;
	case 'a':	goto yy30;
	case 'b':
	case 'g':
	case 'j':
	case 'k':
	case 'q':
	case 'r':
	case 'u':
	case 'v':
	case 'x':
	case 'z':	goto yy31;
	case 'c':	goto yy32;
	case 'd':	goto yy33;
	case 'e':	goto yy34;
	case 'f':	goto yy35;
	case 'h':	goto yy6;
	case 'i':	goto yy36;
	case 'l':	goto yy37;
	case 'm':	goto yy38;
	case 'n':	goto yy39;
	case 'o':	goto yy40;
	case 'p':	goto yy41;
	case 's':	goto yy42;
	case 't':	goto yy43;
	case 'w':	goto yy44;
	case 'y':	goto yy45;
	case 0xA0:	goto yy79;
	case 0xC2:	goto yy67;
	case 0xC3:	goto yy58;
	case 0xC4:	goto yy59;
	case 0xC5:	goto yy60;
	case 0xC6:	goto yy61;
	case 0xC7:	goto yy62;
	case 0xC8:	goto yy63;
	case 0xC9:	goto yy64;
	case 0xCA:	goto yy65;
	case 0xCB:	goto yy71;
	case 0xCC:
	case 0xCD:
	case 0xCE:
	case 0xCF:
	case 0xD0:
	case 0xD1:
	case 0xD2:
	case 0xD3:
	case 0xD4:
	case 0xD5:
	case 0xD6:
	case 0xD7:
	case 0xD8:
	case 0xD9:
	case 0xDA:
	case 0xDB:
	case 0xDC:
	case 0xDD:
	case 0xDE:
	case 0xDF:	goto yy81;
	case 0xE0:	goto yy82;
	case 0xE1:
	case 0xE3:
	case 0xE4:
	case 0xE5:
	case 0xE6:
	case 0xE7:
	case 0xE8:
	case 0xE9:
	case 0xEA:
	case 0xEB:
	case 0xEC:	goto yy83;
	case 0xE2:	goto yy56;
	case 0xED:	goto yy84;
	case 0xEE:
	case 0xEF:	goto yy85;
	case 0xF0:	goto yy86;
	case 0xF1:
	case 0xF2:
	case 0xF3:	goto yy87;
	case 0xF4:	goto yy88;
	default:	goto yy89;
	}
yy2:
	yyaccept = 0;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 'a') {
		if (yych == '/') goto yy1043;
	} else {
		if (yych <= 'b') goto yy1042;
		if (yych == 'n') goto yy1044;
	}
yy3:
	{ return t_return(ttLeftBracket); }
yy4:
	yyaccept = 1;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= '`') goto yy5;
	if (yych <= 'z') goto yy1038;
yy5:
	{ return t_return(ttRest); }
yy6:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 't') {
		if (yych <= '`') {
			if (yych <= 'Z') {
				if (yych <= '@') goto yy362;
				goto yy363;
			} else {
				if (yych == '\\') goto yy301;
				goto yy362;
			}
		} else {
			if (yych <= 'd') {
				if (yych <= 'a') goto yy1015;
				goto yy363;
			} else {
				if (yych <= 'e') goto yy1016;
				if (yych <= 's') goto yy363;
				goto yy1017;
			}
		}
	} else {
		if (yych <= 0xC5) {
			if (yych <= 0xC2) {
				if (yych <= 'z') goto yy363;
				goto yy362;
			} else {
				if (yych <= 0xC3) goto yy129;
				if (yych <= 0xC4) goto yy130;
				goto yy131;
			}
		} else {
			if (yych <= 0xC8) {
				if (yych <= 0xC6) goto yy132;
				if (yych <= 0xC7) goto yy133;
				goto yy134;
			} else {
				if (yych <= 0xC9) goto yy135;
				if (yych <= 0xCA) goto yy136;
				goto yy362;
			}
		}
	}
yy7:
	{ return t_return(ttWord); }
yy8:
	yyaccept = 3;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych == '.') goto yy352;
	goto yy885;
yy9:
	{ return t_return(ttNumber); }
yy10:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 't') {
		if (yych <= '\\') {
			if (yych <= '@') {
				if (yych == '.') goto yy676;
				goto yy362;
			} else {
				if (yych <= 'Z') goto yy363;
				if (yych <= '[') goto yy362;
				goto yy301;
			}
		} else {
			if (yych <= 'i') {
				if (yych <= '`') goto yy362;
				if (yych <= 'h') goto yy363;
				goto yy542;
			} else {
				if (yych == 'r') goto yy671;
				goto yy363;
			}
		}
	} else {
		if (yych <= 0xC5) {
			if (yych <= 0xC2) {
				if (yych <= 'u') goto yy882;
				if (yych <= 'z') goto yy363;
				goto yy362;
			} else {
				if (yych <= 0xC3) goto yy129;
				if (yych <= 0xC4) goto yy130;
				goto yy131;
			}
		} else {
			if (yych <= 0xC8) {
				if (yych <= 0xC6) goto yy132;
				if (yych <= 0xC7) goto yy133;
				goto yy134;
			} else {
				if (yych <= 0xC9) goto yy135;
				if (yych <= 0xCA) goto yy136;
				goto yy362;
			}
		}
	}
yy11:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 0xC2) {
		if (yych <= 'Z') {
			if (yych == '.') goto yy676;
			if (yych <= '@') goto yy362;
			goto yy363;
		} else {
			if (yych <= '\\') {
				if (yych <= '[') goto yy362;
				goto yy301;
			} else {
				if (yych <= '`') goto yy362;
				if (yych <= 'z') goto yy363;
				goto yy362;
			}
		}
	} else {
		if (yych <= 0xC6) {
			if (yych <= 0xC3) goto yy129;
			if (yych <= 0xC4) goto yy130;
			if (yych <= 0xC5) goto yy131;
			goto yy132;
		} else {
			if (yych <= 0xC8) {
				if (yych <= 0xC7) goto yy133;
				goto yy134;
			} else {
				if (yych <= 0xC9) goto yy135;
				if (yych <= 0xCA) goto yy136;
				goto yy362;
			}
		}
	}
yy12:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 'o') {
		if (yych <= '[') {
			if (yych <= '.') {
				if (yych <= '-') goto yy362;
				goto yy676;
			} else {
				if (yych <= '@') goto yy362;
				if (yych <= 'Z') goto yy363;
				goto yy362;
			}
		} else {
			if (yych <= '`') {
				if (yych <= '\\') goto yy301;
				goto yy362;
			} else {
				if (yych <= 'a') goto yy872;
				if (yych <= 'n') goto yy363;
				goto yy873;
			}
		}
	} else {
		if (yych <= 0xC5) {
			if (yych <= 0xC2) {
				if (yych <= 'z') goto yy363;
				goto yy362;
			} else {
				if (yych <= 0xC3) goto yy129;
				if (yych <= 0xC4) goto yy130;
				goto yy131;
			}
		} else {
			if (yych <= 0xC8) {
				if (yych <= 0xC6) goto yy132;
				if (yych <= 0xC7) goto yy133;
				goto yy134;
			} else {
				if (yych <= 0xC9) goto yy135;
				if (yych <= 0xCA) goto yy136;
				goto yy362;
			}
		}
	}
yy13:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 'o') {
		if (yych <= '\\') {
			if (yych <= '@') {
				if (yych == '.') goto yy676;
				goto yy362;
			} else {
				if (yych <= 'Z') goto yy363;
				if (yych <= '[') goto yy362;
				goto yy301;
			}
		} else {
			if (yych <= 'e') {
				if (yych <= '`') goto yy362;
				if (yych <= 'd') goto yy363;
				goto yy869;
			} else {
				if (yych == 'i') goto yy665;
				if (yych <= 'n') goto yy363;
				goto yy666;
			}
		}
	} else {
		if (yych <= 0xC4) {
			if (yych <= 'z') {
				if (yych == 'r') goto yy870;
				goto yy363;
			} else {
				if (yych <= 0xC2) goto yy362;
				if (yych <= 0xC3) goto yy129;
				goto yy130;
			}
		} else {
			if (yych <= 0xC7) {
				if (yych <= 0xC5) goto yy131;
				if (yych <= 0xC6) goto yy132;
				goto yy133;
			} else {
				if (yych <= 0xC8) goto yy134;
				if (yych <= 0xC9) goto yy135;
				if (yych <= 0xCA) goto yy136;
				goto yy362;
			}
		}
	}
yy14:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 'z') {
		if (yych <= '[') {
			if (yych <= '.') {
				if (yych <= '-') goto yy362;
				goto yy676;
			} else {
				if (yych <= '@') goto yy362;
				if (yych <= 'Z') goto yy363;
				goto yy362;
			}
		} else {
			if (yych <= '`') {
				if (yych <= '\\') goto yy301;
				goto yy362;
			} else {
				if (yych == 'e') goto yy867;
				goto yy363;
			}
		}
	} else {
		if (yych <= 0xC6) {
			if (yych <= 0xC3) {
				if (yych <= 0xC2) goto yy362;
				goto yy129;
			} else {
				if (yych <= 0xC4) goto yy130;
				if (yych <= 0xC5) goto yy131;
				goto yy132;
			}
		} else {
			if (yych <= 0xC8) {
				if (yych <= 0xC7) goto yy133;
				goto yy134;
			} else {
				if (yych <= 0xC9) goto yy135;
				if (yych <= 0xCA) goto yy136;
				goto yy362;
			}
		}
	}
yy15:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 'z') {
		if (yych <= '[') {
			if (yych <= '.') {
				if (yych <= '-') goto yy362;
				goto yy676;
			} else {
				if (yych <= '@') goto yy362;
				if (yych <= 'Z') goto yy363;
				goto yy362;
			}
		} else {
			if (yych <= '`') {
				if (yych <= '\\') goto yy301;
				goto yy362;
			} else {
				if (yych == 'o') goto yy865;
				goto yy363;
			}
		}
	} else {
		if (yych <= 0xC6) {
			if (yych <= 0xC3) {
				if (yych <= 0xC2) goto yy362;
				goto yy129;
			} else {
				if (yych <= 0xC4) goto yy130;
				if (yych <= 0xC5) goto yy131;
				goto yy132;
			}
		} else {
			if (yych <= 0xC8) {
				if (yych <= 0xC7) goto yy133;
				goto yy134;
			} else {
				if (yych <= 0xC9) goto yy135;
				if (yych <= 0xCA) goto yy136;
				goto yy362;
			}
		}
	}
yy16:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 'e') {
		if (yych <= '[') {
			if (yych <= '.') {
				if (yych <= '-') goto yy362;
				goto yy676;
			} else {
				if (yych <= '@') goto yy362;
				if (yych <= 'Z') goto yy363;
				goto yy362;
			}
		} else {
			if (yych <= '`') {
				if (yych <= '\\') goto yy301;
				goto yy362;
			} else {
				if (yych <= 'a') goto yy851;
				if (yych <= 'd') goto yy363;
				goto yy852;
			}
		}
	} else {
		if (yych <= 0xC5) {
			if (yych <= 0xC2) {
				if (yych <= 'z') goto yy363;
				goto yy362;
			} else {
				if (yych <= 0xC3) goto yy129;
				if (yych <= 0xC4) goto yy130;
				goto yy131;
			}
		} else {
			if (yych <= 0xC8) {
				if (yych <= 0xC6) goto yy132;
				if (yych <= 0xC7) goto yy133;
				goto yy134;
			} else {
				if (yych <= 0xC9) goto yy135;
				if (yych <= 0xCA) goto yy136;
				goto yy362;
			}
		}
	}
yy17:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 'r') {
		if (yych <= 'N') {
			if (yych <= '-') {
				if (yych == '\'') goto yy842;
				goto yy362;
			} else {
				if (yych <= '.') goto yy676;
				if (yych <= '@') goto yy362;
				if (yych <= 'M') goto yy363;
				goto yy839;
			}
		} else {
			if (yych <= '\\') {
				if (yych <= 'Z') goto yy363;
				if (yych <= '[') goto yy362;
				goto yy841;
			} else {
				if (yych <= '`') goto yy362;
				if (yych == 'n') goto yy840;
				goto yy363;
			}
		}
	} else {
		if (yych <= 0xC5) {
			if (yych <= 'z') {
				if (yych <= 's') goto yy542;
				if (yych <= 't') goto yy644;
				goto yy363;
			} else {
				if (yych <= 0xC2) goto yy362;
				if (yych <= 0xC3) goto yy129;
				if (yych <= 0xC4) goto yy130;
				goto yy131;
			}
		} else {
			if (yych <= 0xC9) {
				if (yych <= 0xC6) goto yy132;
				if (yych <= 0xC7) goto yy133;
				if (yych <= 0xC8) goto yy134;
				goto yy135;
			} else {
				if (yych <= 0xCA) goto yy136;
				if (yych == 0xE2) goto yy843;
				goto yy362;
			}
		}
	}
yy18:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 'z') {
		if (yych <= 'Z') {
			if (yych == '.') goto yy676;
			if (yych <= '@') goto yy362;
			goto yy363;
		} else {
			if (yych <= '\\') {
				if (yych <= '[') goto yy362;
				goto yy301;
			} else {
				if (yych <= '`') goto yy362;
				if (yych <= 'a') goto yy837;
				goto yy363;
			}
		}
	} else {
		if (yych <= 0xC6) {
			if (yych <= 0xC3) {
				if (yych <= 0xC2) goto yy362;
				goto yy129;
			} else {
				if (yych <= 0xC4) goto yy130;
				if (yych <= 0xC5) goto yy131;
				goto yy132;
			}
		} else {
			if (yych <= 0xC8) {
				if (yych <= 0xC7) goto yy133;
				goto yy134;
			} else {
				if (yych <= 0xC9) goto yy135;
				if (yych <= 0xCA) goto yy136;
				goto yy362;
			}
		}
	}
yy19:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 'z') {
		if (yych <= '[') {
			if (yych <= '.') {
				if (yych <= '-') goto yy362;
				goto yy676;
			} else {
				if (yych <= '@') goto yy362;
				if (yych <= 'Z') goto yy363;
				goto yy362;
			}
		} else {
			if (yych <= '`') {
				if (yych <= '\\') goto yy301;
				goto yy362;
			} else {
				if (yych == 'e') goto yy643;
				goto yy363;
			}
		}
	} else {
		if (yych <= 0xC6) {
			if (yych <= 0xC3) {
				if (yych <= 0xC2) goto yy362;
				goto yy129;
			} else {
				if (yych <= 0xC4) goto yy130;
				if (yych <= 0xC5) goto yy131;
				goto yy132;
			}
		} else {
			if (yych <= 0xC8) {
				if (yych <= 0xC7) goto yy133;
				goto yy134;
			} else {
				if (yych <= 0xC9) goto yy135;
				if (yych <= 0xCA) goto yy136;
				goto yy362;
			}
		}
	}
yy20:
	yyaccept = 2;
	yych = (unsigned char)*(marker = ++cursor);
	if (yych <= 's') {
		if (yych <= '\\') {
			if (yych <= '@') {
				if (yych == '.') goto yy676;
				goto yy362;
			} else {
				if (yych <= 'Z') goto yy363;
				if (yych <= '[') goto yy362;
				goto yy301;
			}
		} else {
			if (yych <= 'h') {
				if (yych <= '`') goto yy362;
				if (yych <= 'a') goto yy821;
				goto yy363;
			} else {
